# ChangeLog file for sql/src/backends/monet5
# This file is updated with mchangelog (Gentoo echangelog bastard script)

  20 Aug 2009; Fabian Groffen <fabian@cwi.nl> database.c, database.h,
  monetdb.c, monetdb.1:
  Always put created databases under maintenance, they have to be explicitly
  released after creating and performing the initialisation steps by the DBA

*Aug2009-SP1

  25 Aug 2009; Fabian Groffen <fabian@cwi.nl> merovingian.c:
  Properly recognise mero_port option from config file, bug #2844202

*Aug2009

  31 Jul 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
  monetdb destroy now allows to remove a database under maintenance. This way
  an administrator can prevent users connecting to the database and hence
  starting it on demand, which in turn prevents removal of the database.

  21 Jul 2009; Fabian Groffen <fabian@cwi.nl> merovingian.1,
  merovingian.c, monetdb.1, monetdb.c:
  Implemented sharing of databases with tags. Using these tags, extra
  information is available on a remote merovingian to select a database during
  connect. For this, a client can now connect to a database using a glob
  expression, which is matched on the database plus tag.  When multiple
  databases match such expression, a load-balancing technique is
  applied.

  02 Jul 2009; Fabian Groffen <fabian@cwi.nl> monetdb.1, monetdb.c:
  Allow expression matches for 'monetdb status' command.

  01 Jul 2009; Fabian Groffen <fabian@cwi.nl> monetdb.1, monetdb.c:
  Allow an expression to be used to match against the list of discovered
  databases for future convenience.

  19 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
  Allow setting the name of a database (a.k.a. renaming it), doing all the
  logic to keep the logdir aligned in case it's absolute.

  19 Jun 2009; Fabian Groffen <fabian@cwi.nl> merovingian.c,
  merovingian.1:
  Increase the default mero_exittimeout from 7 to 60 seconds.

  19 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.1, monetdb.c: